--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,11 @@
 This package should look like Unitful.jl but behave like DynamicQuantities.jl under the hood
 
 Changelog:
-1.  Quantity now subtypes to Number, use FlexQuant for values that don't subtype to number (quantity auto-selects appropriate container)
-2.  Multiplying with dynamic units now eagerly converts to dimensional quantities
-3.  Re-added "quantity" constructor function, does not eagerly convert to dimensional quantity
-4.  Replaced MirrorDims() dispatch with a sentinel value approach; this results in greatest compatibility of dynamic Quantity with Number
+1.  Added support for linear algebra; LinmapQuant factorizes out units for efficient O(N+M) pure-unit ops while allowing efficient numeric methods to handle raw matrix ops
+2.  Quantity now subtypes to Number, use FlexQuant for values that don't subtype to number (quantity auto-selects appropriate container)
+3.  Multiplying with dynamic units now eagerly converts to dimensional quantities
+4.  Re-added "quantity" constructor function, does not eagerly convert to dimensional quantity
+5.  Replaced MirrorDims() dispatch with a sentinel value approach; this results in greatest compatibility of dynamic Quantity with Number
 
 Current Tasks:
 1.  Finish basic LinmapQuant functionality for +, -, *, /, \, lu, ^, exp, sin, cos, tan,
@@ -34,7 +35,6 @@ Current Tasks:
         -   Multiplication should "separate" dimensions and values 
             - Use dimension(a::AbstractMatrix) = QuantMatrixDims(a)
             - This prevents allocations and should even work on non-quantity arrays
-            - dimension(q) on non-quantity numbers should be NoDims()
             - An inner if-statement on the multiplication can case out AbstractMatrix{<:QuantUnion} and apply dstrip
             - Dimension multiplication is only defined for QuantMatrixDims and 
     -   Multiplying a dense array of dimensions with a factored matrix is 2N (same as factoring, so you don't need it)
